@@ -2,7 +2,7 @@
  OmegaT 3.1.6 
 ----------------------------------------------------------------------
    5 Enhancements
-   5 Bug fixes
+   6 Bug fixes
    3 Localisation update
 ----------------------------------------------------------------------
 3.1.6 vs. 3.1.5
@@ -41,6 +41,8 @@ can be removed from tooltip, text between paired tags can be bolded.
 tags and could not be translated.
 
   - Multi-line notes in XLIFF files were not extracted correctly
+
+  - When using Java 8, the first character of each line of a LaTeX document was lost
 
   Localisation updates:
 
